--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ capybara-*.html
 /config/database.yml
 config/initializers/secret_token.rb
 config/secrets.yml
+config/newrelic.yml
 
 .rspec
 /coverage/
